v3.4.9 (XXXX-XX-XX)
-------------------

* The _users collection is now properly restored when using arangorestore.

* Updated arangosync to 0.7.1.

* Fixed issue #10470: The WebUI now shows potential errors and details which
  occured using _api/import (e.g. unique constraint violated).

* Make the timeouts for replication requests (for active failover and master-slave 
  replication configurable via startup options:

      --replication.connect-timeout
      --replication.request-timeout

* Fixed ArangoSearch index removes being discarded on commiting consolidation
  results with pending removes after some segments under consolidation were
  already committed.

* Disallow the usage of subqueries inside AQL traversal PRUNE conditions.
  Using subqueries inside PRUNE conditions causes undefined behavior,
  so such queries will now be aborted early on with a parse error 
  instead of running into undefined behavior.

* Fixed search not working in document view while in code mode.

* Fixed issue #10090: fix repeatable seek to the same document in
  SEARCH operations for ArangoSearch views.

* Fix config directory handling, so we don't trap into UNC path lookups on Windows.

* Fixed issue #10193: Arangoexport does not handle line feeds when exporting as 
  csv.

* Properly report parse errors for extraneous unterminated string literals
  at the end of AQL query strings. For example, in the query `RETURN 1 "abc`,
  the `RETURN 1` part was parsed fully, and the `"abc` part at the end was
  parsed until the EOF and then forgotten. But as the fully parsed tokens
  `RETURN 1` already form a proper query, the unterminated string literal
  at the end was not reported as a parse error.
  This is now fixed for unterminated string literals in double and single
  quotes as well as unterminated multi-line comments at the end of the query
  string.

* Fixed issue #10078: FULLTEXT with sort on same field not working.

* Fixed issue #10062: AQL: Could not extract custom attribute.
