@@ -370,6 +370,9 @@ class RocksDBEngine final : public StorageEngine {
   /// note: returns a nullptr if automatic syncing is turned off!
   RocksDBSyncThread* syncThread() const { return _syncThread.get(); }
 
+  /// @brief flushes most of the column families
+  void flushColumnFamilies(bool wait);
+
   static arangodb::Result registerRecoveryHelper(std::shared_ptr<RocksDBRecoveryHelper> helper);
   static std::vector<std::shared_ptr<RocksDBRecoveryHelper>> const& recoveryHelpers();
 
