@@ -1,6 +1,11 @@
 v3.4.9 (XXXX-XX-XX)
 -------------------
 
+* In the RocksDB engine, automatically flush more exotic column families
+  10 minutes after server startup, plus every 12 hours while the server is
+  running. This should prevent data from more exotic column families to
+  stay only in WAL and memtables, which may block WAL journals collection.
+
 * The _users collection is now properly restored when using arangorestore.
 
 * Updated arangosync to 0.7.1.
